# grimoire

./: .gitignore  Cargo.toml  README.md
src/: '  3  \  ]  collections.rs  embeddings.rs  grimoire.rs  hellindex.rs  hnsw.rs  lib.rs  main.rs  test.grm
